[project]
name = "nkflow"
version = "0.1.0"
description = "日経225投資分析基盤 (AWS版)"
requires-python = ">=3.12"

dependencies = [
    # データ取得
    "jquants-api-client",
    # 計算
    "duckdb>=1.1",
    "pandas>=2.2",
    "numpy>=1.26",
    # グラフDB
    "kuzu>=0.7",
    # 統計
    "statsmodels>=0.14",
    "scipy>=1.13",
    # グラフ分析
    "networkx>=3.3",
    # API
    "fastapi>=0.115",
    "mangum>=0.19",
    # AWS
    "boto3>=1.34",
    # ユーティリティ
    "joblib>=1.4",
    # 認証 (Auth0 JWT 検証)
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "httpx>=0.27",
    # セクターローテーション分析 (Phase 17)
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "hmmlearn>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "moto[s3,ssm,sns]",
    "httpx",
    "ruff",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
