[project]
name = "nkflow-api"
version = "0.1.0"
description = "nkflow API サーバー (FastAPI + Mangum)"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115",
    "mangum>=0.19",
    # AWS
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "moto[s3,ssm,sns]",
    "httpx",
    "ruff",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
