[project]
name = "hazardbrief-api"
version = "0.1.0"
description = "HazardBrief API サーバー (FastAPI + Mangum)"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115",
    "mangum>=0.19",
    # AWS
    "boto3>=1.34",
    # HTTP (外部API呼び出し)
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "moto[s3,ssm]",
    "httpx",
    "respx",
    "ruff",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "lib"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
